context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.8/tasks/mvp_tasks_deployment_form.md
# Задачи для формы создания внедрения и управления версиями Внедрения

## Обзор

**Компонент:** Форма создания внедрения и управления версиями
**Путь в макете:** Кнопка "Создать внедрение" → форма / Кнопка "Создать новую версию" на детальной → форма
**Статус:** Новая разработка

### Что включает форма:

**Основные поля:**
- Название (обязательное)
- Скоркарты (множественный выбор, обязательно минимум 1)
- Описание (опционально)
- Блок "Артефакты" (опционально): **URL-ссылки** на документы (см. `BE-ART1`)
- Блок "Связанные сущности" (read-only): Симуляции/Пилоты через скоркарты

**Функционал:**
- Создание нового внедрения
- Создание новой версии существующего внедрения (версионирование)
- Редактирование только черновиков/отклоненных версий (deployed-версия не редактируется in-place)
- Валидация полей
- Сохранение новой версии в статусе draft
- Автоматический расчет критичности (MAX критичности всех скоркарт)
- Управление артефактами (добавление/удаление ссылок) для созданного внедрения
- Просмотр "связанных сущностей" для созданного внедрения (read-only)

> Правило MVP: изменения внедрения вносятся только через **новую версию**. Предыдущая deployed-версия остаётся deployed до момента, пока новая версия не пройдёт согласование/утверждение и не будет развернута.

**Права доступа:**
- Создать может: ПРМ (свой продукт), Админ
- Редактировать может: ПРМ (свой продукт), Админ

---

## AN-CHF1: Аналитика формы Внедрения

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 5 дней

### Summary
Детализация требований для разработки формы создания/редактирования Внедрения

### Description

Провести аналитику для разработки формы Внедрения:

1. **Детализация бизнес-требований:**
   - Определить обязательные и опциональные поля
   - Уточнить правила валидации (минимум 1 скоркарта)
   - Определить начальный статус (draft)
   - Уточнить логику автоматического расчета критичности

2. **Спецификация UI/UX:**
   - Дизайн формы (поля, кнопки)
   - Спецификация множественного выбора скоркарт
   - Отображение автоматически рассчитанной критичности
   - Поведение блока "Артефакты" (URL) в create/edit и при создании новой версии
   - Поведение блока "Связанные сущности" в create/edit (read-only)
   - Спецификация валидации
   - Сообщения об ошибках

3. **Спецификация API контракта:**
   - POST /api/deployments/ - создание
   - POST /api/deployments/{id}/versions/ - создание новой версии внедрения
   - PUT /api/deployment-versions/{version_id}/ - обновление версии (только draft/rejected)
   - Артефакты: `BE-ART1` (`/api/deployments/{id}/artifacts/` или `/api/artifacts`)
   - Связанные сущности: `GET /api/deployments/{id}/related/` (см. задачу деталки внедрения)

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] UI/UX спецификация готова
- [ ] Логика расчета критичности описана
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

---

## BE-CHF1: Backend для формы Внедрения

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 3 дня

### Summary
Разработка Backend для создания/редактирования Внедрения

### Description

Разработать Backend для формы Внедрения:

1. **API Endpoint: POST /api/deployments/**

   **Параметры запроса:**
   ```json
   {
     "name": "Внедрение новой скоркарты Premium",
     "scorecard_ids": ["uuid1", "uuid2"],
     "description": "Описание внедрения"
   }
   ```

	   **Бизнес-логика:**
   - Валидация: название обязательно
   - Валидация: scorecard_ids обязателен, минимум 1 скоркарта
   - Валидация: все скоркарты существуют и принадлежат тому же продукту
   - Валидация: пользователь имеет право создавать (ПРМ своего продукта, Админ)
   - Создание внедрения в статусе draft
   - Установка created_by = текущий пользователь
   - Связывание со скоркартами (многие-ко-многим)
	   - Автоматический расчет критичности = MAX(criticality) всех скоркарт
	   - Артефакты не создаются в рамках этого endpoint: управляются отдельно через `BE-ART1` после создания Deployment

2. **API Endpoint: POST /api/deployments/{id}/versions/**

   **Назначение:** создать новую версию внедрения на основе текущей (deployed) или любой выбранной версии.

   **Параметры запроса:**
   ```json
   {
     "base_version_id": "uuid"
   }
   ```

   **Бизнес-логика:**
   - Валидация: пользователь имеет право создавать версию (ПРМ своего продукта, Админ)
   - Создание новой версии со статусом draft (копирование полей/связей из base_version)
   - Важно: текущая deployed-версия остаётся deployed до развертывания новой версии

3. **API Endpoint: PUT /api/deployment-versions/{version_id}/**

   **Параметры запроса:**
   ```json
   {
     "name": "Обновленное название",
     "scorecard_ids": ["uuid1", "uuid2", "uuid3"],
     "description": "Обновленное описание"
   }
   ```

   **Бизнес-логика:**
   - Валидация: пользователь имеет право редактировать
   - Валидация: версия внедрения в статусе draft или approval_rejected/ratification_rejected (нельзя редактировать deployed/rolled_back/archived)
   - Валидация: минимум 1 скоркарта
   - Обновление полей
   - Обновление связей со скоркартами
   - Пересчет критичности = MAX(criticality) всех скоркарт

3. **Автоматический расчет критичности:**
   ```python
   def calculate_deployment_criticality(deployment):
       """Расчет критичности изменения"""
       scorecards = deployment.scorecards.all()
       if not scorecards:
           return None

       criticality_order = {
           'low': 1,
           'medium': 2,
           'high': 3,
           'critical': 4
       }

       max_criticality = max(
           criticality_order.get(sc.criticality, 0)
           for sc in scorecards
       )

       for key, value in criticality_order.items():
           if value == max_criticality:
               return key

       return 'low'
   ```

4. **Права доступа:**
   - Создать может: ПРМ (свой продукт), Админ
   - Редактировать может: ПРМ (свой продукт), Админ
   - HTTP 403 если нет прав

### Acceptance Criteria

- [ ] POST /api/deployments/ реализован
- [ ] POST /api/deployments/{id}/versions/ реализован
- [ ] PUT /api/deployment-versions/{version_id}/ реализован
- [ ] Валидация полей работает
- [ ] Валидация минимум 1 скоркарты работает
- [ ] Связывание со скоркартами работает
- [ ] Автоматический расчет критичности работает
- [ ] Права доступа реализованы
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] API документация обновлена

### Dependencies
- AN-CHF1 (требуется спецификация)
- BE-CL1 (требуется жизненный цикл Deployment)

---

## FE-CHF1: Frontend для формы Внедрения

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 3 дня

### Summary
Разработка UI формы создания/редактирования Внедрения

### Description

Разработать Frontend для формы Внедрения:

1. **Компонент DeploymentForm:**
   - Режим создания (create)
   - Режим редактирования (edit)
   - Валидация полей
   - Отображение автоматически рассчитанной критичности
   - Responsive дизайн

2. **Поля формы:**
   - Название (TextField, обязательное, max 255 символов)
   - Скоркарты (Autocomplete multiple, обязательное, минимум 1)
   - Описание (TextField multiline, опционально)
   - Критичность (read-only, автоматически рассчитывается)
   - Блок "Артефакты" (URL-ссылки, см. `BE-ART1`)
   - Блок "Связанные сущности" (read-only)

3. **Валидация:**
   - Название: обязательное, не пустое
   - Скоркарты: обязательное, минимум 1 выбрана
   - Показ ошибок под полями

4. **Autocomplete для скоркарт:**
   - Множественный выбор
   - Поиск по названию
   - Отображение: ID + название + критичность
   - Фильтрация по продукту внедрения

5. **Отображение критичности:**
   - Бейдж с цветом (low/medium/high/critical)
   - Автоматически обновляется при изменении выбранных скоркарт
   - Показывает MAX критичности всех выбранных скоркарт
   - Подсказка: "Критичность рассчитывается автоматически как максимальная среди всех скоркарт"

6. **Кнопки:**
   - "Отмена" - закрытие формы без сохранения
   - "Сохранить" - сохранение и переход к детальной

7. **Loading и Error состояния:**
   - Disabled кнопка "Сохранить" при отправке
   - Spinner при сохранении
   - Toast уведомления при успехе/ошибке

8. **API интеграция:**
   - DeploymentService.create(data)
   - DeploymentService.createVersion(deploymentId, baseVersionId)
   - DeploymentService.updateVersion(versionId, data)
   - DeploymentService.getArtifacts(deploymentId) / createArtifact / deleteArtifact (или общий ArtifactsService)
   - DeploymentService.getRelated(deploymentId) (для блока "Связанные сущности")
   - ScorecardService.getList(productId) - для выбора скоркарт
   - Обработка ошибок (400, 403, 500)

9. **Поведение блоков на create/edit:**
   - **create (новое внедрение)**:
     - "Артефакты": показываем блок, но disabled/empty с текстом "Доступно после создания внедрения".
     - "Связанные сущности": показываем блок, но disabled/empty с текстом "Доступно после создания внедрения".
   - **create new version / edit existing**:
     - "Артефакты": включены (list/add/delete) для Deployment (логической сущности).
     - "Связанные сущности": включены (read-only), данные через `/related/`.

### Acceptance Criteria

- [ ] DeploymentForm компонент реализован
- [ ] Режим создания работает
- [ ] Режим редактирования работает
- [ ] Валидация полей работает
- [ ] Валидация минимум 1 скоркарты работает
- [ ] Autocomplete для скоркарт работает (множественный выбор)
- [ ] Фильтрация скоркарт по продукту работает
- [ ] Автоматический расчет критичности работает
- [ ] Отображение критичности обновляется при изменении скоркарт
- [ ] Кнопки "Отмена" и "Сохранить" работают
- [ ] Loading состояние работает
- [ ] Error состояние отображается
- [ ] Toast уведомления работают
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Блок "Артефакты" отображается и работает (в edit/новой версии), в create корректный disabled/empty
- [ ] Блок "Связанные сущности" отображается (read-only), в create корректный disabled/empty
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-CHF1 (требуется UI спецификация)
- BE-CHF1 (требуется готовый API endpoint)

---

## Итоговая зависимость задач

```
AN-CHF1 (1 день)
  ↓
BE-CHF1 (2 дня)
  ↓
FE-CHF1 (3 дня)
```

**Общая длительность (критический путь):** 6 дней

---

## ✅ Ключевые особенности

1. **Новая разработка** - полностью новая форма
2. **Множественный выбор скоркарт** - обязательно минимум 1
3. **Автоматический расчет критичности** - MAX критичности всех скоркарт
4. **Валидация** - обязательные поля и минимум 1 скоркарта
5. **Autocomplete для скоркарт** - удобный множественный выбор
6. **Фильтрация скоркарт** - по продукту внедрения
7. **Отображение критичности** - read-only, автоматически обновляется
8. **Права доступа** - ПРМ (свой продукт), Админ
9. **Статус draft** - при создании

---
